ipad svg width bug on safari

--- a/assets/styles/layouts/_frontpage.scss
+++ b/assets/styles/layouts/_frontpage.scss
@@ -32,6 +32,9 @@
 	}
 	.ipad{
 		width: 220px;
+		svg{
+			width: 100%;
+		}
 	}
 	.ipad-screen{
 		top: 14px;
